--- a/.travis.yml
+++ b/.travis.yml
@@ -15,22 +15,26 @@ android:
   - extra-android-support
 
   # Emulator for the tests
-  - sys-img-armeabi-v7a-android-18
+  - sys-img-armeabi-v7a-android-23
 
 
 before_install:
   - pip install --user codecov
 
 before_script:
+  - chmod +x gradlew
   - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
 
 script:
-  - ./gradlew check -PdisablePreDex --continue --stacktrace
-  - android-wait-for-emulator
-  - adb devices
-  - adb shell input keyevent 82 &amp;
-  - ./gradlew connectedAndroidTest -PdisablePreDex --continue --stacktrace
+ - sudo chmod +x gradlew
+ - ./gradlew check -PdisablePreDex --continue --stacktrace
+ - android-wait-for-emulator
+ - adb devices
+ - adb shell input keyevent 82 &amp;
+ - ./gradlew connectedCheck lint
+ - ./gradlew connectedAndroidTest -PdisablePreDex --continue --stacktrace
+ - ./gradlew connectedInstrumentTest
 
 
 after_success:
