--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_install:
   - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
 
   # Install required Android components.
-  - android update sdk --filter platform-tools,android-24,extra-android-support,$ANDROID_SDKS --no-ui --force
+  - echo y | android update sdk --filter platform-tools,android-24,extra-android-support,$ANDROID_SDKS --no-ui --force
 
 before_script:
   - chmod +x gradlew
