--- a/.travis.yml
+++ b/.travis.yml
@@ -21,15 +21,15 @@ android:
 before_install:
   - pip install --user codecov
   # Install base Android SDK
-  - sudo apt-get update -qq
-  - if [ `uname -m` = x86_64 ]; then sudo apt-get install -qq --force-yes libgd2-xpm ia32-libs ia32-libs-multiarch; fi
-  - wget http://dl.google.com/android/android-sdk_r24.0.1-linux.tgz
-  - tar xzf android-sdk_r24.0.1-linux.tgz
-  - export ANDROID_HOME=$PWD/android-sdk-linux
-  - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
+  #- sudo apt-get update -qq
+  #- if [ `uname -m` = x86_64 ]; then sudo apt-get install -qq --force-yes libgd2-xpm ia32-libs ia32-libs-multiarch; fi
+  #- wget http://dl.google.com/android/android-sdk_r24.0.1-linux.tgz
+  #- tar xzf android-sdk_r24.0.1-linux.tgz
+  #- export ANDROID_HOME=$PWD/android-sdk-linux
+  #- export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
 
   # Install required Android components.
-  - echo y | android update sdk --filter platform-tools,android-24,extra-android-support,$ANDROID_SDKS --no-ui --force
+  #- echo y | android update sdk --filter platform-tools,android-24,extra-android-support,$ANDROID_SDKS --no-ui --force
 
 before_script:
   - chmod +x gradlew
