--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,20 @@ language: android
 jdk:
   - oraclejdk8
 
+env:
+  global:
+    - ANDROID_API_LEVEL=24
+    - ANDROID_BUILD_TOOLS_VERSION=24.0.1
+    - ANDROID_ABI=google_apis/armeabi-v7a
+
 android:
   components:
   - platform-tools
   - tools
-  - build-tools-24.0.1
-  - android-24
+  - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+  - android-$ANDROID_API_LEVEL
  # Emulator for the tests
-  - sys-img-armeabi-v7a-android-23
+  - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
 
 notifications:
   email: false
@@ -29,7 +35,7 @@ before_install:
 
 before_script:
   - chmod +x gradlew
-  - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
 
