--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   global:
     - ANDROID_API_LEVEL=24
     - ANDROID_BUILD_TOOLS_VERSION=24.0.1
-    - ANDROID_ABI=google_apis/armeabi-v7a
+    - ANDROID_ABI=armeabi-v7a
 
 android:
   components:
@@ -15,7 +15,7 @@ android:
   - build-tools-$ANDROID_BUILD_TOOLS_VERSION
   - android-$ANDROID_API_LEVEL
  # Emulator for the tests
-  - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+  - sys-img-armeabi-v7a-$ANDROID_API_LEVEL
 
 notifications:
   email: false
