--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_install:
 
 before_script:
   - chmod +x gradlew
-  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi ANDROID_ABI
+  - echo no | android create avd --force -n test -t android-23 --abi ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
 
