--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ android:
   - build-tools-$ANDROID_BUILD_TOOLS_VERSION
   - android-$ANDROID_API_LEVEL
  # Emulator for the tests
-  - sys-img-armeabi-v7a-$ANDROID_API_LEVEL
+  - sys-img-armeabi-v7a-android-$ANDROID_API_LEVEL
 
 notifications:
   email: false
@@ -35,7 +35,7 @@ before_install:
 
 before_script:
   - chmod +x gradlew
-  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi ANDROID_ABI
+  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
 
